Add unit tests for views
Introduced unit tests for `SignUpView`, `LoginView`, `OtpView`, `ForgotPasswordDialog`, and `RegisterAgencyView`. Refactored various components for improved maintainability and testability.